Projects/Basics/Shopsphere-Ecommerce/K8s_6_HELM/old/_8_Network_Polocies/_2_allow-dns-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: shopsphere
spec:
  podSelector: {}
  policyTypes:
  - Egress
  # Allow DNS resolution
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  # Allow communication with Kubernetes API server
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
    ports:
    - port: 443
      protocol: TCP
