Projects/Basics/Shopsphere-Ecommerce/K8s_6_HELM/old/_8_Network_Polocies/_3_allow-frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: shopsphere
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow external traffic on port 80 (via NodePort)
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 80
      protocol: TCP
  # Allow from backend for API calls
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - port: 80
      protocol: TCP
  egress:
  # Frontend can talk to backend
  - to:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - port: 5000
      protocol: TCP
