Projects/Basics/Shopsphere-Ecommerce/K8s_6_HELM/old/_8_Network_Polocies/_5b_mongodb-policy.yaml
# Allow MongoDB to receive only from backend and db-seed
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-from-backend-and-seed
  namespace: shopsphere
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    - podSelector:
        matchLabels:
          job-name: db-seed  # Allow one-time seed job
    ports:
    - protocol: TCP
      port: 27017
