Projects/Basics/Shopsphere-Ecommerce/K8s_6_HELM/old/_8_Network_Polocies/_7a_db-seed-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-seed-policy
  namespace: shopsphere
spec:
  podSelector:
    matchLabels:
      job-name: db-seed
  policyTypes:
  - Egress
  egress:
  # Seed job needs to talk to backend and MongoDB
  - to:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - port: 5000
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: mongo
    ports:
    - port: 27017
      protocol: TCP
